--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   background: linear-gradient(to bottom, #460101, rgb(255, 64, 0));
   min-height: 100vh;
   margin: 0;
-  font-family: fantasy;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
 
 .checkListBox {
@@ -24,7 +24,7 @@ body {
 }
 .imputPlaceholder {
   text-align: center;
-  font-family: fantasy;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   background: linear-gradient(to bottom, #460101, rgb(255, 64, 0));
   border-radius: 10px;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
@@ -55,6 +55,8 @@ body {
 }
 .checkBtn {
   background: linear-gradient(to top, darkred, darkorange);
+  text-align: center;
+  font-weight: bolder;
 
   width: 3rem;
   height: 3rem;
